# libsoxrpp

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  out.txt
.devcontainer/: devcontainer.json
cmake/: libsoxrpp-config.cmake.in  soxrpp-config.cmake.in
examples/: 1-oneshot.cpp  2-process.cpp  3-callback.cpp
include/: soxrpp.h
include/libsoxrpp/: export.h  libsoxrpp.h
include/soxrpp/: export.h  soxrpp.h
src/: libsoxrpp.cpp  soxrpp.cpp  soxrpp_test.cpp
